--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Document</title>
-</head>
-<body>
-<table id="producttable">
-    <thead>
+  </head>
+  <body>
+    <table id="producttable">
+      <thead>
+        <tr>
+          <td>UPC_Code</td>
+          <td>Product_Name</td>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- existing data could optionally be included here -->
+      </tbody>
+    </table>
+
+    <template id="productrow">
       <tr>
-        <td>UPC_Code</td>
-        <td>Product_Name</td>
+        <td class="record"></td>
+        <td></td>
       </tr>
-    </thead>
-    <tbody>
-      <!-- existing data could optionally be included here -->
-    </tbody>
-  </table>
-  
-  <template id="productrow">
-    <tr>
-      <td class="record"></td>
-      <td></td>
-    </tr>
-  </template>
-</body>
+    </template>
+  </body>
 </html>
