--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <table id="producttable">
-      <thead>
-        <tr>
-          <td>UPC_Code</td>
-          <td>Product_Name</td>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- existing data could optionally be included here -->
-      </tbody>
-    </table>
-
-    <template id="productrow">
-      <tr>
-        <td class="record"></td>
-        <td></td>
-      </tr>
-    </template>
+    <h1>it is a message from kian</h1>
   </body>
 </html>
